# crispy-tailwind-select-issue

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
demo/: autocomplete.py  forms.py  views.py
demo/fixtures/: person_test_data.json
demo/migrations/: 0001_initial.py
select_issue/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: styles.css
templates/demo/: index.html
