[project]
name = "crispy-tailwind-select-issue"
version = "0.1.0"
description = "Django project template managed by PDM"
authors = [
    {name = "blasferna", email = "blasferna@gmail.com"},
]
dependencies = [
    "django>=4",
    "backports-zoneinfo>=0.2.1",
    "crispy-tailwind @ file:///${PROJECT_ROOT}/../crispy-tailwind",
    "django-autocomplete-light>=3.9.7",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
package-type = "application"
[tool.pdm.scripts]
migrate = "python manage.py migrate"
start = "python manage.py runserver"
build_tailwind = "npx tailwindcss -i ./static/src/styles.css -o ./static/css/styles.css --minify"
post_init = { composite = ["pdm install", "migrate", "start"] }

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.12.1",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.pdm/
  | \.git/
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''